--- a/index.css
+++ b/index.css
@@ -31,3 +31,21 @@ body > .container {
 .windows-instructions {
   padding-left: 0em;
 }
+
+.popup-robo-image {
+  background: url("linkbot-front-view.png");
+  height: 15em;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 10em;
+  font-family: Courier, monospace;
+  margin: 2em 0;
+}
+
+.popup-robo-id {
+  position: relative;
+  left: 51%;
+  top: 45%;
+  color: hsl(185, 5%, 90%);
+  font-size: 150%;
+}
