--- a/html/component/linkbot/demo/index.html
+++ b/html/component/linkbot/demo/index.html
@@ -23,9 +23,9 @@
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
 
+        <input type="text" class="linkbotjs-knob" />
         
         <script src="../dist/linkbot.js"></script>
-        <script>document.body.appendChild(Linkbots.managerElement());</script>
 
     </body>
 </html>
